--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="media.css">
     <script defer src="script.js"></script>
 </head>
 <body>
     <header><h1>Calculator</h1></header>
     <main>
         <div class="inputNumOperators">
-            <input type="text" readonly>
+            <input type="text" id="calculatorInput" readonly >
             <div class="numberOperators">
                 <button id="clear" class="clear">AC</button>
                 <button id="erase" class="erase">
@@ -20,20 +19,20 @@
                 </button>
                 <button id="multiply" class="operator">*</button>
                 <button id="divide" class="operator">/</button>
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
+                <button id="number" value="7">7</button>
+                <button id="number" value="8">8</button>
+                <button id="number" value="9">9</button>
                 <button id="add" class="operator">+</button>
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
+                <button id="number"" value="4">4</button>
+                <button id="number"" value="5">5</button>
+                <button id="number"" value="6">6</button>
                 <button id="subtract" class="operator">-</button>
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
+                <button id="number"" value="1">1</button>
+                <button id="number"" value="2">2</button>
+                <button id="number"" value="3">3</button>
                 <button id="equals" class="equals">=</button>
                 <button id="negative" class="operator">+/-</button>    
-                <button>0</button>
+                <button id="number"" value="0">0</button>
                 <button>.</button>
             </div>
     </main>
