--- a/index.html
+++ b/index.html
@@ -8,32 +8,31 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <header><h1>Calculator</h1></header>
     <main>
         <div class="inputNumOperators">
             <input type="text" id="calculatorInput" readonly>
             <div class="numberOperators">
-                <button id="clear" class="clear">AC</button>
-                <button id="erase" class="erase">
+                <button id="clear">AC</button>
+                <button id="backspace">
                     <img src="img/backspace.svg" alt="backspaceIcon">
                 </button>
-                <button id="multiply" class="operator" value="*">*</button>
-                <button id="divide" class="operator" value="/">/</button>
-                <button class="number" value="7">7</button>
-                <button class="number" value="8">8</button>
-                <button class="number" value="9">9</button>
-                <button id="add" class="operator" value="+">+</button>
-                <button class="number"" value="4">4</button>
-                <button class="number"" value="5">5</button>
-                <button class="number"" value="6">6</button>
-                <button id="subtract" class="operator" value="-">-</button>
-                <button class="number"" value="1">1</button>
-                <button class="number"" value="2">2</button>
-                <button class="number"" value="3">3</button>
+                <button id="multiply" class="operator">*</button>
+                <button id="divide" class="operator">/</button>
+                <button class="number">7</button>
+                <button class="number">8</button>
+                <button class="number">9</button>
+                <button id="add" class="operator">+</button>
+                <button class="number">4</button>
+                <button class="number">5</button>
+                <button class="number">6</button>
+                <button id="subtract" class="operator">-</button>
+                <button class="number">1</button>
+                <button class="number">2</button>
+                <button class="number">3</button>
                 <button id="equals" class="equals">=</button>
-                <button id="negative" class="operator" value="-">+/-</button>    
-                <button class="number" value="0">0</button>
-                <button>.</button>
+                <button class="operator">%</button>    
+                <button class="number">0</button>
+                <button id="dot" class="number">.</button>
             </div>
     </main>
 </body>
